--- a/services.html
+++ b/services.html
@@ -146,70 +146,8 @@
 	</div><!-- /.container -->
 </section><!-- /.brand-area -->
 
-<footer class="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="footer-widget about-widget">
-					<a href="#" class="footer-logo"><img src="img/logo-footer.png" alt="Awesome Image"/></a>
-					<p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-				</div><!-- /.footer-widget -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-2 col-sm-6 col-xs-12">
-				<div class="footer-widget link-widget">
-					<div class="title">
-						<h3>Services</h3>
-					</div><!-- /.title -->
-					<ul class="link-list">
-						<li><a href="#">News & Tips</a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Our Shop</a></li>
-						<li><a href="#">Contact Us</a></li>
-					</ul><!-- /.link-list -->
-				</div><!-- /.footer-widget -->
-			</div><!-- /.col-md-2 -->
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<div class="footer-widget social-widget">
-					<div class="title">
-						<h3>Follow Us</h3>
-					</div><!-- /.title -->
-					<ul class="social list-inline">
-						<li><a href="#" class="fa fa-facebook"></a></li><!--
-						--><li><a href="#" class="fa fa-twitter"></a></li><!--
-						--><li><a href="#" class="fa fa-vimeo"></a></li><!--
-						--><li><a href="#" class="fa fa-google-plus"></a></li><!--
-						--><li><a href="#" class="fa fa-linkedin"></a></li><!--
-						--><li><a href="#" class="fa fa-youtube"></a></li>
-					</ul><!-- /.social list-inline -->
-				</div><!-- /.footer-widget -->
-			</div><!-- /.col-md-4 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="footer-widget newsletter-widget">
-					<div class="title">
-						<h3>Newsletter</h3>
-					</div><!-- /.title -->
-					<form action="#" class="newsletter-form">
-						<p>Excepteur sint occaecat cupidatat proident sunt.</p>
-						<input type="text" placeholder="Your Email" />
-						<button type="submit" class="thm-btn">Sign Up</button>
-					</form><!-- /.newsletter-form -->
-				</div><!-- /.footer-widget -->
-			</div><!-- /.col-md-3 -->
-		</div><!-- /.row -->
-	</div><!-- /.container -->
-	<div class="footer-bottom">
-		<div class="container">
-			<div class="copy-text pull-left">BrentCreek  &copy;  2018 All Right Reserved</div><!-- /.copy-text -->
-			<div class="footer-menu pull-right">
-				<ul class="list-inline">
-					<li><a href="#">Terms of Service</a></li>
-					<li><a href="#">Privacy Policy</a></li>
-				</ul><!-- /.list-inline -->
-			</div><!-- /.footer-menu -->
-		</div><!-- /.container -->
-	</div><!-- /.footer-bottom -->
-</footer><!-- /.footer -->
+<!-- partial:partial/_footer.html -->
+<!-- partial -->
 
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
