--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="minimal-bootstrap-carousel" class="carousel slide carousel-fade slider-home-one" data-ride="carousel">
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
-		<div class="item active slide-1" style="background-image: url(img/banner-1-1.jpg);background-position: right bottom;">
+		<div class="item active slide-1" style="background-image: url(img/slide1.jpg);background-position: right bottom;">
 
 			<div class="carousel-caption">
 				<div class="thm-container">
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="item slide-2" style="background-image: url(img/banner-1-2.jpg);background-position: center center;">
+		<div class="item slide-2" style="background-image: url(img/slide2.jpg);background-position: center center;">
 
 			<div class="carousel-caption">
 				<div class="thm-container">
