Icon and title change

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>BrentCreek || Responsive HTML 5 template</title>
+    <title>We are a Security Protection Agency | Sparta 3.8 Protection Inc</title>
     <!-- mobile responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
