--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>BrentCreek || Responsive HTML 5 template</title>
+    <title>Security and Protection Agency | Sparta 3.8 Protection Inc</title>
     <!-- mobile responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 <div id="minimal-bootstrap-carousel" class="carousel slide carousel-fade slider-home-one" data-ride="carousel">
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
-		<div class="item active slide-1" style="background-image: url(img/slide1.jpg);background-position: right bottom;">
+		<div class="item active slide-1" style="background-image: url(img/slide1.jpg);">
 
 			<div class="carousel-caption">
 				<div class="thm-container">
@@ -68,35 +68,34 @@
             --><li data-target="#minimal-bootstrap-carousel" data-slide-to="1"></li>
 	</ul>
 </div>
-
 <section class="features-area">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
 					<i class="secure-pro-icon-security-camera-2"></i>
-					<h3>Video Surveillance</h3>
+					<h3>Residential Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
-					<i class="secure-pro-icon-key"></i>
-					<h3>Locksmith Services</h3>
+					<i class="secure-pro-icon-antivirus-2"></i>
+					<h3>Armed/Unarmed Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
-					<i class="secure-pro-icon-safebox"></i>
-					<h3>Safes & Locks</h3>
+					<i class="secure-pro-icon-traffic-cone"></i>
+					<h3>Construction Site Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
-					<i class="secure-pro-icon-alarm"></i>
-					<h3>Alarm System</h3>
+					<i class="secure-pro-icon-shield-3"></i>
+					<h3>Bodyguard Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
