--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>BrentCreek || Responsive HTML 5 template</title>
+    <title>Contact us for your Security and Protection | Sparta 3.8 Protection Inc</title>
     <!-- mobile responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
