--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <div class="preloader"></div><!-- /.preloader -->
 
-<!-- partial:partial/_topbar.html -->
-<!-- partial -->
+@@include('partial/_topbar.html')
 
-<!-- partial:partial/_header.html -->
-<!-- partial -->
+@@include('partial/_header.html', {
+	"current" : "home"
+})
 
 <div id="minimal-bootstrap-carousel" class="carousel slide carousel-fade slider-home-one" data-ride="carousel">
 	<!-- Wrapper for slides -->
@@ -472,8 +472,7 @@
 	</div><!-- /.container -->
 </section><!-- /.brand-area -->
 
-<!-- partial:partial/_footer.html -->
-<!-- partial -->
+@@include('partial/_footer.html')
 
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
