Removing map and topbar address , change services names and styles

--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
 					<i class="secure-pro-icon-security-camera-2"></i>
-					<h3>Residential Security</h3>
+					<h3>Residential<br>Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
 					<i class="secure-pro-icon-antivirus-2"></i>
-					<h3>Armed/Unarmed Security</h3>
+					<h3>Armed/Unarmed<br>Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
 					<i class="secure-pro-icon-traffic-cone"></i>
-					<h3>Construction Site Security</h3>
+					<h3>Construction Site<br>Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
 					<i class="secure-pro-icon-shield-3"></i>
-					<h3>Bodyguard Security</h3>
+					<h3>Executive<br>Protection/Bodyguard</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
