--- a/index.html
+++ b/index.html
@@ -142,42 +142,180 @@
 <section class="service-area overlaped-top">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-service">
 					<div class="img-box">
-						<img src="img/service-1-1.png" alt="Awesome Image"/>
+						<img src="img/services/armed-unarmed.jpeg" alt="Awesome Image"/>
 					</div><!-- /.img-box -->
 					<div class="text-box">
-						<a href="#"><h3>Private Security</h3></a>
+						<a href="#"><h3>ARMED/UNARMED SECURITY</h3></a>
 						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
 						<a href="#" class="read-more">Read More</a>
 					</div><!-- /.text-box -->
 				</div><!-- /.single-service -->
-			</div><!-- /.col-md-4 -->
-			<div class="col-md-4 col-sm-6 col-xs-12">
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-service">
 					<div class="img-box">
-						<img src="img/service-1-2.png" alt="Awesome Image"/>
+						<img src="img/services/active-shooter.png" alt="Awesome Image"/>
 					</div><!-- /.img-box -->
 					<div class="text-box">
-						<a href="#"><h3>Transport Security</h3></a>
+						<a href="#"><h3>ACTIVE SHOOTER TRAINING</h3></a>
 						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
 						<a href="#" class="read-more">Read More</a>
 					</div><!-- /.text-box -->
 				</div><!-- /.single-service -->
-			</div><!-- /.col-md-4 -->
-			<div class="col-md-4 col-sm-6 col-xs-12">
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-service">
 					<div class="img-box">
-						<img src="img/service-1-3.png" alt="Awesome Image"/>
+						<img src="img/services/surveillance.jpeg" alt="Awesome Image"/>
 					</div><!-- /.img-box -->
 					<div class="text-box">
-						<a href="#"><h3>Home Security</h3></a>
+						<a href="#"><h3>SURVEILLANCE</h3></a>
 						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
 						<a href="#" class="read-more">Read More</a>
 					</div><!-- /.text-box -->
 				</div><!-- /.single-service -->
-			</div><!-- /.col-md-4 -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/event-security.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>SCHOOL/CAMPUS SECURITY</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+		</div>
+		<div class="row">
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/construction-site.png" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>CONSTRUCTION SITE SECURITY</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/disaster-relief.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>DISASTER RELIEF SECURITY</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/executive-protection.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>EXECUTIVE PROTECTION / BODYGUARD</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/event-security.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>EVENT SECURITY</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+		</div>
+		<div class="row">
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/cargo-escort.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>CARGO ESCORT SECURITY</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/retail-commercial.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>RETAIL/COMMERCIAL SECURITY</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/hotel-security.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>HOTEL SECURITY</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/hotel-security.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>RESIDENTIAL SECURITY</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+		</div>
+		<div class="row">
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/parking-enforcement.jpeg" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>PARKING ENFORCEMENT</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-service">
+					<div class="img-box">
+						<img src="img/services/rovin-patrol.png" alt="Awesome Image"/>
+					</div><!-- /.img-box -->
+					<div class="text-box">
+						<a href="#"><h3>ROVING/MOBILE PATROL</h3></a>
+						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
+						<a href="#" class="read-more">Read More</a>
+					</div><!-- /.text-box -->
+				</div><!-- /.single-service -->
+			</div><!-- /.col-md-3 -->
 		</div><!-- /.row -->
 	</div><!-- /.container -->
 </section><!-- /.service-area -->
