Feature services edited

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 				<div class="single-contact-info text-center">
 					<i class="icon icon-Pointer"></i>
 					<h3>Our Location</h3>
-					<p>PO Box 16122 Collins Street West <br /> Victoria 8007 Canada</p>
+					<p>Serving Miami and <br /> Broward County</p>
 				</div><!-- /.single-contact-info -->
 			</div><!-- /.col-md-4 -->
 			<div class="col-md-4 col-sm-6 col-xs-12">
@@ -50,8 +50,8 @@
 			<div class="col-md-4 col-sm-6 col-xs-12">
 				<div class="single-contact-info text-center">
 					<i class="icon icon-Imbox"></i>
-					<h3>Write Us Now</h3>
-					<p>info@healthcoach.com <br />info@example.com</p>
+					<h3>Contact us Now</h3>
+					<p>sparta38protectioninc@gmail.com</p>
 				</div><!-- /.single-contact-info -->
 			</div><!-- /.col-md-4 -->
 		</div><!-- /.row -->
