--- a/index.html
+++ b/index.html
@@ -73,29 +73,79 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
-					<i class="secure-pro-icon-security-camera-2"></i>
-					<h3>Residential<br>Security</h3>
-					<a href="#" class="read-more">Read More</a>
-				</div><!-- /.single-feature-box -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-feature-box">
 					<i class="secure-pro-icon-antivirus-2"></i>
+					<!-- <i class="secure-pro-icon-alarm"></i>
+					<i class="secure-pro-icon-antivirus"></i>
+					<i class="secure-pro-icon-antivirus-1"></i>
+					<i class="secure-pro-icon-antivirus-2"></i>
+					<i class="secure-pro-icon-combination"></i>
+					<i class="secure-pro-icon-fingerprint"></i>
+					<i class="secure-pro-icon-fingerprint-scan"></i>
+					<i class="secure-pro-icon-fingerprint-scan-1"></i>
+					<i class="secure-pro-icon-fire-extinguisher"></i>
+					<i class="secure-pro-icon-fire-extinguisher-1"></i>
+					<i class="secure-pro-icon-firewall"></i>
+					<i class="secure-pro-icon-firewall-1"></i>
+					<i class="secure-pro-icon-firewall-2"></i>
+					<i class="secure-pro-icon-handcuffs"></i>
+					<i class="secure-pro-icon-hose"></i>
+					<i class="secure-pro-icon-jail"></i>
+					<i class="secure-pro-icon-key"></i>
+					<i class="secure-pro-icon-keyhole"></i>
+					<i class="secure-pro-icon-laptop"></i>
+					<i class="secure-pro-icon-laptop-1"></i>
+					<i class="secure-pro-icon-laptop-2"></i>
+					<i class="secure-pro-icon-lockpick"></i>
+					<i class="secure-pro-icon-padlock"></i>
+					<i class="secure-pro-icon-padlock-1"></i>
+					<i class="secure-pro-icon-padlock-2"></i>
+					<i class="secure-pro-icon-padlock-3"></i>
+					<i class="secure-pro-icon-paper-shredder"></i>
+					<i class="secure-pro-icon-pin-code"></i>
+					<i class="secure-pro-icon-pin-code-1"></i>
+					<i class="secure-pro-icon-safebox"></i>
+					<i class="secure-pro-icon-safebox-1"></i>
+					<i class="secure-pro-icon-scan"></i>
+					<i class="secure-pro-icon-scan-1"></i>
+					<i class="secure-pro-icon-search"></i>
+					<i class="secure-pro-icon-seatbelt"></i>
+					<i class="secure-pro-icon-security-camera"></i>
+					<i class="secure-pro-icon-security-camera-1"></i>
+					<i class="secure-pro-icon-security-camera-2"></i>
+					<i class="secure-pro-icon-security-camera-3"></i>
+					<i class="secure-pro-icon-security-camera-4"></i>
+					<i class="secure-pro-icon-shield"></i>
+					<i class="secure-pro-icon-shield-1"></i>
+					<i class="secure-pro-icon-shield-2"></i>
+					<i class="secure-pro-icon-shield-3"></i>
+					<i class="secure-pro-icon-siren"></i>
+					<i class="secure-pro-icon-smartphone"></i>
+					<i class="secure-pro-icon-target"></i>
+					<i class="secure-pro-icon-traffic-cone"></i>
+					<i class="secure-pro-icon-traffic-signal"></i>
+					<i class="secure-pro-icon-warning"></i>-->
 					<h3>Armed/Unarmed<br>Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
-					<i class="secure-pro-icon-traffic-cone"></i>
-					<h3>Construction Site<br>Security</h3>
+					<i class="secure-pro-icon-shield-3"></i>
+					<h3>Executive<br>Protection / Bodyguard</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-feature-box">
-					<i class="secure-pro-icon-shield-3"></i>
-					<h3>Executive<br>Protection/Bodyguard</h3>
+					<i class="secure-pro-icon-target"></i>
+					<h3>Active<br>Shooter</h3>
+					<a href="#" class="read-more">Read More</a>
+				</div><!-- /.single-feature-box -->
+			</div><!-- /.col-md-3 -->
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="single-feature-box">
+					<i class="secure-pro-icon-security-camera-2"></i>
+					<h3>Residential<br>Security</h3>
 					<a href="#" class="read-more">Read More</a>
 				</div><!-- /.single-feature-box -->
 			</div><!-- /.col-md-3 -->
@@ -372,68 +422,6 @@
 		</div><!-- /.row -->
 	</div><!-- /.container -->
 </section><!-- /.fun-fact-area -->
-
-<section class="team-section sec-pad">
-	<div class="container">
-		<div class="sec-title text-center">
-			<p>Our Team</p>
-			<h2>Meet <span>Experts</span></h2>
-		</div><!-- /.sec-title -->
-		<div class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<div class="single-team">
-					<div class="img-box">
-						<img src="img/team-1-1.jpg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<h3>Michel Laurent</h3>
-						<p>Squad Leader</p>
-						<div class="social">
-							<a href="#" class="fa fa-facebook"></a><!--
-							--><a href="#" class="fa fa-twitter"></a><!--
-							--><a href="#" class="fa fa-linkedin"></a><!--
-							--><a href="#" class="fa fa-vimeo"></a>
-						</div><!-- /.social -->
-					</div><!-- /.text-box -->
-				</div><!-- /.single-team -->
-			</div><!-- /.col-md-4 -->
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<div class="single-team">
-					<div class="img-box">
-						<img src="img/team-1-2.jpg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<h3>Zander Rohan</h3>
-						<p>Squad Leader</p>
-						<div class="social">
-							<a href="#" class="fa fa-facebook"></a><!--
-							--><a href="#" class="fa fa-twitter"></a><!--
-							--><a href="#" class="fa fa-linkedin"></a><!--
-							--><a href="#" class="fa fa-vimeo"></a>
-						</div><!-- /.social -->
-					</div><!-- /.text-box -->
-				</div><!-- /.single-team -->
-			</div><!-- /.col-md-4 -->
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<div class="single-team">
-					<div class="img-box">
-						<img src="img/team-1-3.jpg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<h3>Jana Reichel</h3>
-						<p>Squad Leader</p>
-						<div class="social">
-							<a href="#" class="fa fa-facebook"></a><!--
-							--><a href="#" class="fa fa-twitter"></a><!--
-							--><a href="#" class="fa fa-linkedin"></a><!--
-							--><a href="#" class="fa fa-vimeo"></a>
-						</div><!-- /.social -->
-					</div><!-- /.text-box -->
-				</div><!-- /.single-team -->
-			</div><!-- /.col-md-4 -->
-		</div><!-- /.row -->
-	</div><!-- /.container -->
-</section><!-- /.team-section -->
 
 <section class="brand-area">
 	<div class="container">
