--- a/index.html
+++ b/index.html
@@ -156,22 +156,24 @@
 <section class="about-area sec-pad pb0">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-7">
 				<div class="about-content">
 					<div class="sec-title">
 						<p>Welcome</p>
-						<h2>We Have 20 Years <br /> of <span>Experience</span></h2>
+						<h2>We Have 20+ Years <br /> of <span>Experience</span></h2>
 					</div><!-- /.sec-title -->
-					<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
+					<p>Sparta 3.8 Protection, Inc. is a Certified Service-Disabled Veteran-Owned Small Business. Owned and operated by a 15-year special operations combat veteran with a vast knowledge of security, ranging from executive protection, diplomatic security, and surveillance to firearms training, advanced medical training, and close-quarters combat.</p>
+					<p>With over 20+ years of experience combined in Military, Law Enforcement, and Security services, we dedicate ourselves to the mission through efficiency and effectiveness. As a collaborative group of experienced professionals, we integrate our training, focus, and discipline to provide the safest environment possible. Our method is an agile and proactive approach with the ability to collect, analyze, and appropriately assess any situation in order to mitigate threats. Each team member is licensed, insured, First Aid, CPR, and AED certified and required to pass firearms and weapons handling qualifications with a 90% or better. The team also completes active shooter training and scenario-based training to handle the most complex situations. </p>
+					<p>Sparta 3.8 offers a wide variety of security services to a broad range of clients. We are committed to customer relationship through designing and implementing security curricula to fit individuals’ needs and expectations, therefore, offering preeminent satisfaction.  As our customer, you have the option of armed and/or unarmed officers, short and/or long-term assignments, uniformed and/or suited, day and/or night service. If uncertain, we will help you develop a customized security program to accommodate your protection requirements. Our desired outcome is to deliver top-quality safety and security for any situation, tailored to every individual, which surpasses any other agency – second to none.</p>
+					<p>Our mission and number one priority is you, your family, your business, your property, your possessions; If it matters to you, it matters to us. You can have peace of mind knowing Sparta 3.8 Protection Inc. is there for all your safety and security needs. </p>
 					<ul class="list-items">
-						<li><i class="fa fa-circle-o"></i> Convallis ligula ligula gravida tristique magna tincidunt.</li>
-						<li><i class="fa fa-circle-o"></i> Lobortis massa fringilla odio ultricies tempus.</li>
-						<li><i class="fa fa-circle-o"></i> Faucibus odio quis eleifend eros risus.</li>
+						<li><i class="fa fa-circle-o"></i> We are flexible, accountable, and available to you 24/7 – 365 days a year!</li>
+						<li><i class="fa fa-circle-o"></i> We Served Our Country – Give Us The Opportunity To Serve You!.</li>
 					</ul><!-- /.list-items -->
 					<a href="#" class="thm-btn">Get Started</a>
 				</div><!-- /.about-content -->
 			</div><!-- /.col-md-6 -->
-			<div class="col-md-6">
+			<div class="col-md-5">
 				<div class="about-img text-right">
 					<img src="img/about-1.png" alt="Awesome Image"/>
 				</div><!-- /.about-img -->
