--- a/services.html
+++ b/services.html
@@ -30,186 +30,9 @@
     </div><!-- /.container -->
 </section><!-- /.inner-banner -->
 
-<section class="service-area service-page sec-pad">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/armed-unarmed-security-2.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>ARMED/UNARMED SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/active-shooter.png" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>ACTIVE SHOOTER TRAINING</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/surveillance.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>SURVEILLANCE</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/school-campus-security-2.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>SCHOOL/CAMPUS SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-		</div>
-		<div class="row">
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/construction-site.png" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>CONSTRUCTION SITE SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/disaster-relief.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>DISASTER RELIEF SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/executive-protection.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>EXECUTIVE PROTECTION / BODYGUARD</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/event-security.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>EVENT SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-		</div>
-		<div class="row">
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/cargo-escort.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>CARGO ESCORT SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/retail-commercial.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>RETAIL/COMMERCIAL SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/hotel-security.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>HOTEL SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/residential-security-2.png" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>RESIDENTIAL SECURITY</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-		</div>
-		<div class="row">
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/parking-enforcement.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>PARKING ENFORCEMENT</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="single-service">
-					<div class="img-box">
-						<img src="img/services/roving-patrol-2.jpeg" alt="Awesome Image"/>
-					</div><!-- /.img-box -->
-					<div class="text-box">
-						<a href="#"><h3>ROVING/MOBILE PATROL</h3></a>
-						<p>Excepteur sint occaecat cupidatat non proi dent, sunt in culpa qui officia deserunt mollit anim id est.</p>
-						<a href="#" class="read-more">Read More</a>
-					</div><!-- /.text-box -->
-				</div><!-- /.single-service -->
-			</div><!-- /.col-md-3 -->
-		</div><!-- /.row -->
-	</div><!-- /.container -->
-</section><!-- /.service-area -->
+@@include('partial/_services.html', {
+	"current" : "services"
+})
 
 <section class="brand-area">
 	<div class="container">
