--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div class="box valign-middle">
 						<div class="content ">
 							<h4 data-animation="animated fadeInUp">Veteran Owned and Operated</h4>
-							<h3 data-animation="animated fadeInUp">Disciplines, Screened, <br>Fully Licensed & Highly <br>Trained Professionals</h3>
+							<h3 data-animation="animated fadeInUp">Disciplined, Screened, <br>Fully Licensed & Highly <br>Trained Professionals</h3>
 							<p data-animation="animated fadeInDown">We served our country - Give us the opportunity to serve you!</p>
 							<a href="#" class="banner-btn thm-btn" data-animation="animated fadeInDown">Get Appointment</a>
 						</div>
