Logo added, contact form

--- a/contact.html
+++ b/contact.html
@@ -33,18 +33,11 @@
 <section class="contact-info-area sec-pad">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="col-md-4 col-sm-6 col-xs-12 col-md-offset-2">
 				<div class="single-contact-info text-center">
 					<i class="icon icon-Pointer"></i>
 					<h3>Our Location</h3>
 					<p>Serving Miami and <br /> Broward County</p>
-				</div><!-- /.single-contact-info -->
-			</div><!-- /.col-md-4 -->
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<div class="single-contact-info text-center">
-					<i class="icon icon-Phone"></i>
-					<h3>Call Us Now</h3>
-					<p>(+48) 564-334-21-22-34 <br />(+48) 564-334-21-25</p>
 				</div><!-- /.single-contact-info -->
 			</div><!-- /.col-md-4 -->
 			<div class="col-md-4 col-sm-6 col-xs-12">
@@ -55,6 +48,29 @@
 				</div><!-- /.single-contact-info -->
 			</div><!-- /.col-md-4 -->
 		</div><!-- /.row -->
+		<!--<div class="row">
+			<div class="col-md-4 col-sm-6 col-xs-12">
+				<div class="single-contact-info text-center">
+					<i class="icon icon-Pointer"></i>
+					<h3>Our Location</h3>
+					<p>Serving Miami and <br /> Broward County</p>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12">
+				<div class="single-contact-info text-center">
+					<i class="icon icon-Phone"></i>
+					<h3>Call Us Now</h3>
+					<p>(+48) 564-334-21-22-34 <br />(+48) 564-334-21-25</p>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12">
+				<div class="single-contact-info text-center">
+					<i class="icon icon-Imbox"></i>
+					<h3>Contact us Now</h3>
+					<p>sparta38protectioninc@gmail.com</p>
+				</div>
+			</div>
+		</div>-->
 	</div><!-- /.container -->
 </section><!-- /.contact-info-area -->
 
