--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 			<div class="col-md-6 clearfix">
 				<div class="appointment-img-box pull-right">
 					<img src="img/appointment-1.jpg" alt="Awesome Image"/>
-					<div class="appoint-text"><img src="img/appoint-icon-1.png" alt="Awesome Image"/> 1-500-778-9982</div><!-- /.appoint-text -->
+
 				</div><!-- /.appointment-img-box -->
 			</div><!-- /.col-md-6 -->
 			<div class="col-md-6">
@@ -391,35 +391,15 @@
 	<div class="container">
 		<div class="brand-carousel owl-carousel owl-theme">
 			<div class="item">
-				<img src="img/brand-1-1.png" alt="Awesome Image"/>
+				<img src="img/brands/logo1.png" alt="Awesome Image"/>
 			</div><!-- /.item -->
 			<div class="item">
-				<img src="img/brand-1-2.png" alt="Awesome Image"/>
+				<img src="img/brands/logo2.png" alt="Awesome Image"/>
 			</div><!-- /.item -->
 			<div class="item">
-				<img src="img/brand-1-3.png" alt="Awesome Image"/>
+				<img src="img/brands/logo3.png" alt="Awesome Image"/>
 			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-4.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-5.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-1.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-2.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-3.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-4.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-5.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
+
 		</div><!-- /.brand-carousel -->
 	</div><!-- /.container -->
 </section><!-- /.brand-area -->
