Read/more heights, services update

--- a/about.html
+++ b/about.html
@@ -113,55 +113,7 @@
     </section>
     <!-- /.fun-fact-area -->
 
-    <section class="brand-area">
-        <div class="container">
-            <div class="brand-carousel owl-carousel owl-theme">
-                <div class="item">
-                    <img src="img/brand-1-1.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-2.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-3.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-4.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-5.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-1.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-2.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-3.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-4.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-                <div class="item">
-                    <img src="img/brand-1-5.png" alt="Awesome Image" />
-                </div>
-                <!-- /.item -->
-            </div>
-            <!-- /.brand-carousel -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.brand-area -->
+    @@include('partial/_brands.html')
 
     @@include('partial/_footer.html')
 
