--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 				<div class="single-contact-info text-center">
 					<i class="icon icon-Pointer"></i>
 					<h3>Our Location</h3>
-					<p>Serving Miami and <br /> Broward County</p>
+					<p>Serving Florida State</p>
 				</div><!-- /.single-contact-info -->
 			</div><!-- /.col-md-4 -->
 			<div class="col-md-4 col-sm-6 col-xs-12">
