--- a/index.html
+++ b/index.html
@@ -195,66 +195,6 @@
 	"current" : "home"
 })
 
-
-<section class="testimonial-area ">
-	<div class="container">
-		<div class="sec-title text-center">
-			<p>Testimonials</p>
-			<h2>Our Client <span>Say</span></h2>
-		</div><!-- /.sec-title -->
-		<div class="testimonial-carousel owl-theme owl-carousel">
-			<div class="item">
-				<div class="single-testimonial">
-					<div class="inner">
-						<div class="icon-box">
-							<img src="img/testi-1-1.png" alt="Awesome Image"/>
-						</div><!-- /.icon-box -->
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut <br />labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco <br />laboris nisi  aliquip commodo consequat.</p>
-						<h3>Misti Bubrig</h3>
-						<span>CEO & Co-Founder</span>
-					</div><!-- /.inner -->
-				</div><!-- /.single-testimonial -->
-			</div><!-- /.item -->
-			<div class="item">
-				<div class="single-testimonial">
-					<div class="inner">
-						<div class="icon-box">
-							<img src="img/testi-1-1.png" alt="Awesome Image"/>
-						</div><!-- /.icon-box -->
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut <br />labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco <br />laboris nisi  aliquip commodo consequat.</p>
-						<h3>Nathan Kliger</h3>
-						<span>CEO & Co-Founder</span>
-					</div><!-- /.inner -->
-				</div><!-- /.single-testimonial -->
-			</div><!-- /.item -->
-			<div class="item">
-				<div class="single-testimonial">
-					<div class="inner">
-						<div class="icon-box">
-							<img src="img/testi-1-1.png" alt="Awesome Image"/>
-						</div><!-- /.icon-box -->
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut <br />labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco <br />laboris nisi  aliquip commodo consequat.</p>
-						<h3>Summer Kiener</h3>
-						<span>CEO & Co-Founder</span>
-					</div><!-- /.inner -->
-				</div><!-- /.single-testimonial -->
-			</div><!-- /.item -->
-			<div class="item">
-				<div class="single-testimonial">
-					<div class="inner">
-						<div class="icon-box">
-							<img src="img/testi-1-1.png" alt="Awesome Image"/>
-						</div><!-- /.icon-box -->
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut <br />labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco <br />laboris nisi  aliquip commodo consequat.</p>
-						<h3>Augusta Kolassa</h3>
-						<span>CEO & Co-Founder</span>
-					</div><!-- /.inner -->
-				</div><!-- /.single-testimonial -->
-			</div><!-- /.item -->
-		</div><!-- /.testimonial-carousel -->
-	</div><!-- /.container -->
-</section><!-- /.testimonial-area -->
-
 <section class="appointment-area">
 	<div class="container">
 		<div class="row">
@@ -299,58 +239,73 @@
 	</div><!-- /.container -->
 </section><!-- /.appointment-area -->
 
-<section class="faq-video-area sec-pad">
+
+<section class="testimonial-area sec-pad pb0">
 	<div class="container">
 		<div class="sec-title text-center">
-			<p>Our Qualifications</p>
-			<h2>Why Choose Us</h2>
+			<p>Testimonials</p>
+			<h2>Our Client <span>Say</span></h2>
 		</div><!-- /.sec-title -->
-		<div class="row">
-			<div class="col-md-6">
-				<div class="accrodion-grp" data-grp-name="faq-accrodion">
-					<div class="accrodion ">
-						<div class="accrodion-title">
-							<h4>Does it Amet Ligula Vestibulum?</h4>
-						</div>
-						<div class="accrodion-content">
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese runt mollit anim id est labo ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
-						</div>
-					</div>
-					<div class="accrodion active">
-						<div class="accrodion-title">
-							<h4>What does Consectetur Velit?</h4>
-						</div>
-						<div class="accrodion-content">
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese runt mollit anim id est labo ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
-						</div>
-					</div>
-					<div class="accrodion">
-						<div class="accrodion-title">
-							<h4>Can you Augue id Felis?</h4>
-						</div>
-						<div class="accrodion-content">
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese runt mollit anim id est labo ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
-						</div>
-					</div>
-					<div class="accrodion">
-						<div class="accrodion-title">
-							<h4>How are Nam Varius?</h4>
-						</div>
-						<div class="accrodion-content">
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese runt mollit anim id est labo ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
-						</div>
-					</div>
-				</div>
-			</div><!-- /.col-md-6 -->
-			<div class="col-md-6 clearfix">
-				<div class="video-box pull-right">
-					<img src="img/video-thumb-1.png" alt="Awesome Image"/>
-					<a href="#" class="video-btn"><i class="icon icon-Play"></i></a>
-				</div><!-- /.video-box -->
-			</div><!-- /.col-md-6 -->
-		</div><!-- /.row -->
+		<div class="testimonial-carousel owl-theme owl-carousel">
+			<div class="item">
+				<div class="single-testimonial">
+					<div class="inner">
+						<div class="icon-box">
+							<img src="img/testi-1-1.png" alt="Awesome Image"/>
+						</div><!-- /.icon-box -->
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut
+							<br/>labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
+							ullamco <br/>laboris nisi aliquip commodo consequat.</p>
+						<h3>Misti Bubrig</h3>
+						<span>CEO & Co-Founder</span>
+					</div><!-- /.inner -->
+				</div><!-- /.single-testimonial -->
+			</div><!-- /.item -->
+			<div class="item">
+				<div class="single-testimonial">
+					<div class="inner">
+						<div class="icon-box">
+							<img src="img/testi-1-1.png" alt="Awesome Image"/>
+						</div><!-- /.icon-box -->
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut
+							<br/>labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
+							ullamco <br/>laboris nisi aliquip commodo consequat.</p>
+						<h3>Nathan Kliger</h3>
+						<span>CEO & Co-Founder</span>
+					</div><!-- /.inner -->
+				</div><!-- /.single-testimonial -->
+			</div><!-- /.item -->
+			<div class="item">
+				<div class="single-testimonial">
+					<div class="inner">
+						<div class="icon-box">
+							<img src="img/testi-1-1.png" alt="Awesome Image"/>
+						</div><!-- /.icon-box -->
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut
+							<br/>labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
+							ullamco <br/>laboris nisi aliquip commodo consequat.</p>
+						<h3>Summer Kiener</h3>
+						<span>CEO & Co-Founder</span>
+					</div><!-- /.inner -->
+				</div><!-- /.single-testimonial -->
+			</div><!-- /.item -->
+			<div class="item">
+				<div class="single-testimonial">
+					<div class="inner">
+						<div class="icon-box">
+							<img src="img/testi-1-1.png" alt="Awesome Image"/>
+						</div><!-- /.icon-box -->
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut
+							<br/>labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
+							ullamco <br/>laboris nisi aliquip commodo consequat.</p>
+						<h3>Augusta Kolassa</h3>
+						<span>CEO & Co-Founder</span>
+					</div><!-- /.inner -->
+				</div><!-- /.single-testimonial -->
+			</div><!-- /.item -->
+		</div><!-- /.testimonial-carousel -->
 	</div><!-- /.container -->
-</section><!-- /.faq-video-area -->
+</section><!-- /.testimonial-area -->
 
 <section class="fun-fact-area">
 	<div class="container">
@@ -358,51 +313,38 @@
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-fun-fact">
 					<i class="secure-pro-icon-padlock-1"></i>
-					<h3 class="counter">642</h3>
-					<p>Locks Installed</p>
+					<h3 class="counter">30</h3>
+					<p>Security agents</p>
 				</div><!-- /.single-fun-fact -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-fun-fact">
 					<i class="secure-pro-icon-pin-code"></i>
-					<h3 class="counter">746</h3>
+					<h3 class="counter">156</h3>
 					<p>Happy Customers</p>
 				</div><!-- /.single-fun-fact -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-fun-fact">
 					<i class="secure-pro-icon-key"></i>
-					<h3 class="counter">3456</h3>
+					<h3 class="counter">130</h3>
 					<p>Premises Secured</p>
 				</div><!-- /.single-fun-fact -->
 			</div><!-- /.col-md-3 -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="single-fun-fact">
 					<i class="secure-pro-icon-shield-1"></i>
-					<h3 class="counter">431</h3>
-					<p>Awards Win</p>
+					<h3 class="counter">52</h3>
+					<p>Business</p>
 				</div><!-- /.single-fun-fact -->
 			</div><!-- /.col-md-3 -->
 		</div><!-- /.row -->
 	</div><!-- /.container -->
 </section><!-- /.fun-fact-area -->
 
-<section class="brand-area">
-	<div class="container">
-		<div class="brand-carousel owl-carousel owl-theme">
-			<div class="item">
-				<img src="img/brands/logo1.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brands/logo2.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brands/logo3.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
 
-		</div><!-- /.brand-carousel -->
-	</div><!-- /.container -->
-</section><!-- /.brand-area -->
+
+@@include('partial/_brands.html')
 
 @@include('partial/_footer.html')
 
