--- a/testimonials.html
+++ b/testimonials.html
@@ -118,48 +118,13 @@
 	</div><!-- /.container -->
 </section><!-- /.testimonial-area -->
 
-<section class="brand-area">
-	<div class="container">
-		<div class="brand-carousel owl-carousel owl-theme">
-			<div class="item">
-				<img src="img/brand-1-1.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-2.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-3.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-4.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="img/brand-1-5.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="assets/img/brand-1-1.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="assets/img/brand-1-2.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="assets/img/brand-1-3.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="assets/img/brand-1-4.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-			<div class="item">
-				<img src="assets/img/brand-1-5.png" alt="Awesome Image"/>
-			</div><!-- /.item -->
-		</div><!-- /.brand-carousel -->
-	</div><!-- /.container -->
-</section><!-- /.brand-area -->
-
 <!-- partial:partial/_footer.html -->
 <!-- partial -->
 
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
+
+@@include('partial/_brands.html')
 
 @@include('partial/_footer.html')
 
