--- a/index.html
+++ b/index.html
@@ -253,11 +253,12 @@
 						<div class="icon-box">
 							<img src="img/testi-1-1.png" alt="Awesome Image"/>
 						</div><!-- /.icon-box -->
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut
-							<br/>labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
-							ullamco <br/>laboris nisi aliquip commodo consequat.</p>
-						<h3>Misti Bubrig</h3>
-						<span>CEO & Co-Founder</span>
+						<p>Sparta Protection are consummate professionals and I always felt confident in Edrick and his team 
+							<br/>on execution of duties and responsibilities. Not only in the duties and tasks but the team always 
+							<br/>went above and beyond my expectations. Despite the difficult work ethic of many people, Edrick managed 
+							<br/>to instill his professional work ethic in his team and gave his employees a sense of pride that showed in their work.</p>
+						<h3>Sean Flannery</h3>
+						<span>Consultant Project Management</span>
 					</div><!-- /.inner -->
 				</div><!-- /.single-testimonial -->
 			</div><!-- /.item -->
@@ -267,42 +268,16 @@
 						<div class="icon-box">
 							<img src="img/testi-1-1.png" alt="Awesome Image"/>
 						</div><!-- /.icon-box -->
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut
-							<br/>labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
-							ullamco <br/>laboris nisi aliquip commodo consequat.</p>
-						<h3>Nathan Kliger</h3>
-						<span>CEO & Co-Founder</span>
+						<p>Sparta Protections Executive Protection team are like none I’ve come across. Their professionalism and dedication 
+							<br/>to the job is unquestionable. Edrick and his team are highly trained dialed in professionals in this industry. 
+							<br/>I entrust Edrick and his team with the security of my family and myself wherever I go.</p>
+						<h3>Ciro Dipagio</h3>
+						<span>The MobKing</span>
 					</div><!-- /.inner -->
 				</div><!-- /.single-testimonial -->
 			</div><!-- /.item -->
-			<div class="item">
-				<div class="single-testimonial">
-					<div class="inner">
-						<div class="icon-box">
-							<img src="img/testi-1-1.png" alt="Awesome Image"/>
-						</div><!-- /.icon-box -->
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut
-							<br/>labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
-							ullamco <br/>laboris nisi aliquip commodo consequat.</p>
-						<h3>Summer Kiener</h3>
-						<span>CEO & Co-Founder</span>
-					</div><!-- /.inner -->
-				</div><!-- /.single-testimonial -->
-			</div><!-- /.item -->
-			<div class="item">
-				<div class="single-testimonial">
-					<div class="inner">
-						<div class="icon-box">
-							<img src="img/testi-1-1.png" alt="Awesome Image"/>
-						</div><!-- /.icon-box -->
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt.ut
-							<br/>labore etex dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
-							ullamco <br/>laboris nisi aliquip commodo consequat.</p>
-						<h3>Augusta Kolassa</h3>
-						<span>CEO & Co-Founder</span>
-					</div><!-- /.inner -->
-				</div><!-- /.single-testimonial -->
-			</div><!-- /.item -->
+			
+			
 		</div><!-- /.testimonial-carousel -->
 	</div><!-- /.container -->
 </section><!-- /.testimonial-area -->
